--- a/assets/admin/scss/theme/_admin_style.scss
+++ b/assets/admin/scss/theme/_admin_style.scss
@@ -287,7 +287,7 @@ a {
             position: absolute;
             backface-visibility: hidden;
             top: 0;
-            left: 0;
+            left: 25%;
             transition: all 0.5s ease;
             transform: translateX(-100px);
             width: 100%;
