--- a/assets/admin/scss/theme/_admin_style.scss
+++ b/assets/admin/scss/theme/_admin_style.scss
@@ -276,6 +276,8 @@ a {
         position: relative;
         overflow: hidden;
         z-index: 0;
+        width: 155px;
+        margin: 0 auto;
         .front {
             opacity: 1;
             top: 0;
@@ -287,7 +289,7 @@ a {
             position: absolute;
             backface-visibility: hidden;
             top: 0;
-            left: 25%;
+            left: 0%;
             transition: all 0.5s ease;
             transform: translateX(-100px);
             width: 100%;
@@ -821,12 +823,15 @@ del {
 .add-product {
   img {
     width: 200px;
+    height: 480px;
+    object-fit: contain;
   }
   ul {
     li {
       display: flex;
       margin-bottom: 15px;
       .box-input-file {
+        object-fit: contain;
         width: 50px;
         height: 50px;
         background-color: #f1f4fb;
