--- a/assets/scss/theme/_menu.scss
+++ b/assets/scss/theme/_menu.scss
@@ -555,6 +555,8 @@ header{
               display: block;
             }
             .mega-menu-container{
+              min-height: 35vh;
+              padding-bottom: 20px;
               display: block;
             }
           }
