--- a/assets/scss/theme/_style.scss
+++ b/assets/scss/theme/_style.scss
@@ -1592,7 +1592,7 @@ justify-content: center;
 }
 }
 .top-header {
-background-color: $top-header;
+background-color: white;
 .header-contact {
 padding: 15px 0;
 li {
