--- a/assets/admin/scss/theme/_admin_style.scss
+++ b/assets/admin/scss/theme/_admin_style.scss
@@ -2319,7 +2319,7 @@ footer{
 ==========================**/
 //Custom css Start
 body {
-  background-color: $body-bg-color;
+  background-color: white;
   font-size: $body-font-size;
   overflow-x: hidden;
   font-family: $font-work-sans, $font-serif;
