--- a/assets/admin/scss/theme/_admin_style.scss
+++ b/assets/admin/scss/theme/_admin_style.scss
@@ -5839,7 +5839,7 @@ $i:1;
         .nav-right {
           >ul {
             padding: 0 0;
-            justify-content: flex-start;
+            justify-content: flex-end;
             >li {
               &:first-child {
                 .search-form {
